# azimuth-bench

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
azimuth_bench/: __init__.py  __main__.py  errors.py
azimuth_bench/adapters/: __init__.py  base.py  capabilities.py  factory.py  identity.py  llama_cpp.py  mlx.py  ollama.py  ollama_http.py  openai_compatible.py  openai_http.py  planned.py
azimuth_bench/cli/: __init__.py  bench_aux.py  entrypoint.py  throughput.py
azimuth_bench/compare/: __init__.py  projection.py
azimuth_bench/core/: __init__.py  cases.py  comparability.py  env.py  paths.py  runtime.py  suites.py
azimuth_bench/export/: __init__.py  markdown.py  svg_cards.py
azimuth_bench/gates/: __init__.py  promotion.py
azimuth_bench/merge/: __init__.py  bundle.py
azimuth_bench/report/: __init__.py  (+1 more)
benchmarking/: __init__.py  gate.py  roster.py  runner.py  socials.py  summary.py  token.py  utils.py
benchmarks/: benchmark_v2_token_summary.csv  benchmark_v2_token_summary.json  benchmark_v2_token_summary.md  core__deepseek_r1_distill_llama_8b__thinking-default.json  core__gemma3_12b__thinking-default.json  core__gemma3_27b__thinking-default.json  core__gemma3_4b__thinking-default.json  core__llama31_8b__thinking-default.json  core__ministral3_14b__thinking-default.json  core__ministral3_8b__thinking-default.json  core__phi4_mini__thinking-default.json  core__qwen25_coder_14b__thinking-default.json  core__qwen25_coder_32b__thinking-default.json  core__qwen25_coder_7b__thinking-default.json  core__qwen25_instruct_14b__thinking-default.json  core__qwen25_instruct_7b__thinking-default.json  core__qwen35_9b__thinking-default.json  frontier_27b__qwen35_27b_base__thinking-off.json  frontier_27b__qwen35_27b_base__thinking-on.json  frontier_27b__qwen35_27b_opus_distilled_v2__thinking-off.json  frontier_27b__qwen35_27b_opus_distilled_v2__thinking-on.json
configs/: benchmark_v2_models.json
docs/: BENCHMARK_V2_PUBLISH_READY.md  BENCHMARK_V2_QUALITY_ASSESSMENT.md  EXECUTIVE_SUMMARY_QUALITY.md  OLLAMA_MLX_STRATEGIC_ANALYSIS.md  benchmark_v2_implementation.md  benchmark_v2_m5max_protocol.md  index.html  reddit_post_draft_clean.md  reddit_post_template.md  substack_post_template.md
fixture_packs/: README.md
scripts/: benchmark_all_models.sh  benchmark_roster.py  compile_benchmark_summary.py  gate_mlx_model.py  generate_benchmark_socials.py  record_gate_demo.sh  run_token_benchmark.py  training_benchmark.py
signalbench/: __init__.py  __main__.py
tests/: test_azimuth_bench.py  test_azimuth_gate_semantic.py  test_benchmark_v2.py  test_m6_eval.py  test_merge.py  test_release_public_v0_1_0.py  test_ssot.py
(+306 files in other folders)
