[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmark-v2"
version = "0.1.0"
description = "Standalone MLX benchmark-v2 harness and artifact tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.9",
  "matplotlib>=3.8",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
